update in style resume

--- a/29-Jan/index.html
+++ b/29-Jan/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kartik Dua | Resume</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <script defer src="script.js"></script>
 </head>
 <body>
 
     <!-- Hero Section -->
-    <section class="hero">
+    <header class="hero">
         <div class="hero-content">
-            <img src="assets/profile.jpg" alt="Kartik Dua" class="profile-pic">
+            <img src="136839495.jpeg" alt="Kartik Dua" class="profile-pic">
             <h1>Kartik Dua</h1>
             <p>Full Stack Developer | UI/UX Enthusiast</p>
             <div class="buttons">
@@ -20,66 +20,68 @@
                 <button id="theme-toggle">🌙 Dark Mode</button>
             </div>
         </div>
-    </section>
+    </header>
 
-    <!-- About Section -->
-    <section class="about">
-        <h2>About Me</h2>
-        <p>Passionate Full Stack Developer skilled in creating interactive web applications, 
-           scalable backend solutions, and intuitive UI/UX experiences.</p>
-    </section>
+    <main>
+        <!-- About Section -->
+        <section class="about">
+            <h2>About Me</h2>
+            <p>Passionate Full Stack Developer skilled in creating interactive web applications, 
+               scalable backend solutions, and intuitive UI/UX experiences.</p>
+        </section>
 
-    <!-- Skills Section -->
-    <section class="skills">
-        <h2>Technical Skills</h2>
-        <div class="skill-container">
-            <div class="skill-badge">HTML</div>
-            <div class="skill-badge">CSS</div>
-            <div class="skill-badge">JavaScript</div>
-            <div class="skill-badge">React.js</div>
-            <div class="skill-badge">Node.js</div>
-            <div class="skill-badge">MongoDB</div>
-            <div class="skill-badge">Express.js</div>
-            <div class="skill-badge">Python</div>
-            <div class="skill-badge">Git & GitHub</div>
-            <div class="skill-badge">Docker</div>
-        </div>
-    </section>
+        <!-- Skills Section -->
+        <section class="skills">
+            <h2>Technical Skills</h2>
+            <div class="skill-container">
+                <span class="skill-badge">HTML</span>
+                <span class="skill-badge">CSS</span>
+                <span class="skill-badge">JavaScript</span>
+                <span class="skill-badge">React.js</span>
+                <span class="skill-badge">Node.js</span>
+                <span class="skill-badge">MongoDB</span>
+                <span class="skill-badge">Express.js</span>
+                <span class="skill-badge">Python</span>
+                <span class="skill-badge">Git & GitHub</span>
+                <span class="skill-badge">Docker</span>
+            </div>
+        </section>
 
-    <!-- Experience Section -->
-    <section class="experience">
-        <h2>Work Experience</h2>
-        <div class="job">
-            <h3>Software Engineer Intern - XYZ Company</h3>
-            <p>Developed and deployed a full-stack web application using React.js, Node.js, and MongoDB.</p>
-        </div>
-        <div class="job">
-            <h3>Web Developer - ABC Tech</h3>
-            <p>Redesigned the company website, improving performance and user experience.</p>
-       </div>
-    </section>
+        <!-- Experience Section -->
+        <section class="experience">
+            <h2>Work Experience</h2>
+            <article class="job">
+                <h3>Software Engineer Intern - XYZ Company</h3>
+                <p>Developed and deployed a full-stack web application using React.js, Node.js, and MongoDB.</p>
+            </article>
+            <article class="job">
+                <h3>Web Developer - ABC Tech</h3>
+                <p>Redesigned the company website, improving performance and user experience.</p>
+            </article>
+        </section>
 
-    <!-- Projects Section -->
-    <section class="projects">
-        <h2>Projects</h2>
-        <div class="project">
-            <h3>PaySwift (Paytm Clone)</h3>
-            <p>A digital wallet and payment app built with React Native and Firebase.</p>
-            <p>GitHub: <a href="https://github.com/kartikdua" target="_blank">github.com/kartikdua</a></p>
-        </div>
-        <div class="project">
-            <h3>GeoAttend (Facial Recognition & Geo-Attendance)</h3>
-            <p>A mobile app that uses facial recognition and GPS for attendance tracking.</p>
-            <p>GitHub: <a href="https://github.com/kartikdua" target="_blank">github.com/kartikdua</a></p>
-        </div>
-    </section>
+        <!-- Projects Section -->
+        <section class="projects">
+            <h2>Projects</h2>
+            <article class="project">
+                <h3>PaySwift (Paytm Clone)</h3>
+                <p>A digital wallet and payment app built with React Native and Firebase.</p>
+                <p>GitHub: <a href="https://github.com/kartikdua" target="_blank">github.com/kartikdua</a></p>
+            </article>
+            <article class="project">
+                <h3>GeoAttend (Facial Recognition & Geo-Attendance)</h3>
+                <p>A mobile app that uses facial recognition and GPS for attendance tracking.</p>
+                <p>GitHub: <a href="https://github.com/kartikdua" target="_blank">github.com/kartikdua</a></p>
+            </article>
+        </section>
+    </main>
 
     <!-- Contact Section -->
-    <section class="contact">
+    <footer class="contact">
         <h2>Contact</h2>
         <p>Email: <a href="mailto:kartik@example.com">kartik@example.com</a></p>
         <p>GitHub: <a href="https://github.com/kartikdua" target="_blank">github.com/kartikdua</a></p>
-    </section>
+    </footer>
 
 </body>
 </html>
